aj-572 describe all types